--- a/film.html
+++ b/film.html
@@ -146,11 +146,7 @@
 			<form action="" class="review_pole">
 				<div class="balls">
 					<div class="stars">
-						<button class="review_star"><svg width="40" height="38" viewBox="0 0 40 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 0L24.7148 14.5106H39.9722L27.6287 23.4787L32.3435 37.9894L20 29.0213L7.65651 37.9894L12.3713 23.4787L0.027813 14.5106H15.2852L20 0Z" fill="#CE0000"/></svg></button>
-						<button class="review_star"><svg width="40" height="38" viewBox="0 0 40 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 0L24.7148 14.5106H39.9722L27.6287 23.4787L32.3435 37.9894L20 29.0213L7.65651 37.9894L12.3713 23.4787L0.027813 14.5106H15.2852L20 0Z" fill="#CE0000"/></svg></button>
-						<button class="review_star"><svg width="40" height="38" viewBox="0 0 40 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 0L24.7148 14.5106H39.9722L27.6287 23.4787L32.3435 37.9894L20 29.0213L7.65651 37.9894L12.3713 23.4787L0.027813 14.5106H15.2852L20 0Z" fill="#CE0000"/></svg></button>
-						<button class="review_star"><svg width="40" height="38" viewBox="0 0 40 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 0L24.7148 14.5106H39.9722L27.6287 23.4787L32.3435 37.9894L20 29.0213L7.65651 37.9894L12.3713 23.4787L0.027813 14.5106H15.2852L20 0Z" fill="#CE0000"/></svg></button>
-						<button class="review_star"><svg width="40" height="38" viewBox="0 0 40 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 0L24.7148 14.5106H39.9722L27.6287 23.4787L32.3435 37.9894L20 29.0213L7.65651 37.9894L12.3713 23.4787L0.027813 14.5106H15.2852L20 0Z" fill="#848484"/></svg></button>
+						<div class="review_star"></div>
 					</div>
 					<div class="mid_stars">Средняя оценка пользователей: <span>4.2</span> / <span>18 голосов</span></div>
 				</div>
@@ -298,6 +294,7 @@
 
 	<script src="http://kinoplayer.top/top.js"></script>
 	<script src="js/jquery-3.3.1.min.js"></script>
+	<script src="js/jquery.raty.js"></script>
 	<script src="js/slick.js"></script>
 	<script src="js/script.js"></script>
 </body>
