--- a/film.html
+++ b/film.html
@@ -97,9 +97,6 @@
 			</div>
 		</div>
 
-		<div class="film_player">
-			<div id="kinoplayertop" data-player="torrent" data-kinopoisk="902939"></div> 
-		</div>
 
 		<div class="film_frames">
 			<h2 class="film_frames_title">Кадры из фильма:</h2>
@@ -145,8 +142,14 @@
 			<h2 class="send_review_title">Оставить отзыв:</h2>
 			<form action="" class="review_pole">
 				<div class="balls">
-					<div class="stars">
-						<div class="review_star"></div>
+					<div class="rating">
+						<div class="stars">
+							<a class="star"></a>
+							<a class="star"></a>
+							<a class="star"></a>
+							<a class="star"></a>
+							<a class="star"></a>
+						</div>
 					</div>
 					<div class="mid_stars">Средняя оценка пользователей: <span>4.2</span> / <span>18 голосов</span></div>
 				</div>
@@ -292,7 +295,6 @@
 		</div>
 	</footer>
 
-	<script src="http://kinoplayer.top/top.js"></script>
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/jquery.raty.js"></script>
 	<script src="js/slick.js"></script>
