--- a/index.html
+++ b/index.html
@@ -216,121 +216,14 @@
 				</div>
 				<div class="line"></div>
 
-				<div class="slider film-pages">
-					<div class="main_film">
-						<div class="main_film_title"><span>Однажды в... Голливуде (2019)</span><div><button><img src="images/vectors/heart.png" alt=""></button><button><img src="images/vectors/add.png" alt=""></button></div></div>
-						<div class="main_film_info">
-							<img src="images/filmPosters/hollywood.png" alt="" class="main_film_poster" width="170" height="270">
-							<div class="main_film_info_text">
-								<div class="film_descr">Год: <a href="#">2019</a></div>
-								<div class="film_descr">Страна: <a href="#">США</a>,<a href="#">Великобритания</a></div>
-								<div class="film_descr">Жанр: <a href="#">Ебанутый</a></div>
-								<div class="film_descr">Режиссёр: <a href="#">Квентин Тарантино</a></div>
-								<div class="film_descr">Длительность: 161 мин.</div>
-								<div class="film_descr">1969 год, золотой век Голливуда уже закончился. Известный актёр Рик Далтон и его дублер Клифф Бут пытаются найти свое место в стремительно меняющемся мире киноиндустрии.</div>
-							</div>
-						</div>
-						<div class="main_film_btns">
-							<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
-							<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-							<div class="main_film_raiting">
-								<div>Рейтинг: <span>5.5</span>/<span>5.0</span></div>
-								<div class="stars"><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg></div>
-							</div>
-						</div>
-						<div class="line"></div>
-					</div>
-					<div class="main_film">
-						<div class="main_film_title"><span>Бесславные ублюдки (2009)</span><div><button><img src="images/vectors/heart.png" alt=""></button><button><img src="images/vectors/add.png" alt=""></button></div></div>
-						<div class="main_film_info">
-							<img src="images/filmPosters/ubl.png" alt="" class="main_film_poster" width="170" height="270">
-							<div class="main_film_info_text">
-								<div class="film_descr">Год: <a href="#">2009</a></div>
-								<div class="film_descr">Страна: <a href="#">США</a>,<a href="#">Германия</a></div>
-								<div class="film_descr">Жанр: <a href="#">Ебанутый</a></div>
-								<div class="film_descr">Режиссёр: <a href="#">Квентин Тарантино</a></div>
-								<div class="film_descr">Длительность: 153 мин.</div>
-								<div class="film_descr">Вторая мировая война, в оккупированной немцами Франции группа американских солдат-евреев наводит страх на нацистов, жестоко убивая и скальпируя солдат.</div>
-							</div>
-						</div>
-						<div class="main_film_btns">
-							<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
-							<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-							<div class="main_film_raiting">
-								<div>Рейтинг: <span>5.0</span>/<span>5.0</span></div>
-								<div class="stars"><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg></div>
-							</div>
-						</div>
-						<div class="line"></div>
-					</div>
-					<div class="main_film">
-						<div class="main_film_title"><span>Форд против Феррари (2019)</span><div><button><img src="images/vectors/heart.png" alt=""></button><button><img src="images/vectors/add.png" alt=""></button></div></div>
-						<div class="main_film_info">
-							<img src="images/filmPosters/ford.png" alt="" class="main_film_poster" width="170" height="270">
-							<div class="main_film_info_text">
-								<div class="film_descr">Год: <a href="#">2019</a></div>
-								<div class="film_descr">Страна: <a href="#">США</a>,<a href="#">Франция</a></div>
-								<div class="film_descr">Жанр: <a href="#">Ебанутый</a></div>
-								<div class="film_descr">Режиссёр: <a href="#">Джеймс Мэнголд</a></div>
-								<div class="film_descr">Длительность: 152 мин.</div>
-								<div class="film_descr">1969 год, золотой век Голливуда уже закончился. Известный актёр Рик Далтон и его дублер Клифф Бут пытаются найти свое место в стремительно меняющемся мире киноиндустрии.</div>
-							</div>
-						</div>
-						<div class="main_film_btns">
-							<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
-							<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-							<div class="main_film_raiting">
-								<div>Рейтинг: <span>4.0</span>/<span>5.0</span></div>
-								<div class="stars"><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#848484"/></svg></div>
-							</div>
-						</div>
-						<div class="line"></div>
-					</div>
-					<div class="main_film">
-						<div class="main_film_title"><span>Гран Торино (2008)</span><div><button><img src="images/vectors/heart.png" alt=""></button><button><img src="images/vectors/add.png" alt=""></button></div></div>
-						<div class="main_film_info">
-							<img src="images/filmPosters/torino.png" alt="" class="main_film_poster" width="170" height="270">
-							<div class="main_film_info_text">
-								<div class="film_descr">Год: <a href="#">2008</a></div>
-								<div class="film_descr">Страна: <a href="#">США</a>,<a href="#">Германия</a></div>
-								<div class="film_descr">Жанр: <a href="#">Ебанутый</a></div>
-								<div class="film_descr">Режиссёр: <a href="#">Клинт Иствуд</a></div>
-								<div class="film_descr">Длительность: 116 мин.</div>
-								<div class="film_descr">Вышедший на пенсию автомеханик Уолт Ковальски проводит дни, починяя что-то по дому, попивая пиво и раз в месяц заходя к парикмахеру. И хотя последним желанием его недавно почившей жены было совершение...</div>
-							</div>
-						</div>
-						<div class="main_film_btns">
-							<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
-							<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-							<div class="main_film_raiting">
-								<div>Рейтинг: <span>5.0</span>/<span>5.0</span></div>
-								<div class="stars"><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg></div>
-							</div>
-						</div>
-						<div class="line"></div>
-					</div>
-					<div class="main_film">
-						<div class="main_film_title"><span>Бесславные ублюдки (2009)</span><div><button><img src="images/vectors/heart.png" alt=""></button><button><img src="images/vectors/add.png" alt=""></button></div></div>
-						<div class="main_film_info">
-							<img src="images/filmPosters/ubl.png" alt="" class="main_film_poster" width="170" height="270">
-							<div class="main_film_info_text">
-								<div class="film_descr">Год: <a href="#">2009</a></div>
-								<div class="film_descr">Страна: <a href="#">США</a>,<a href="#">Германия</a></div>
-								<div class="film_descr">Жанр: <a href="#">Ебанутый</a></div>
-								<div class="film_descr">Режиссёр: <a href="#">Квентин Тарантино</a></div>
-								<div class="film_descr">Длительность: 153 мин.</div>
-								<div class="film_descr">Вторая мировая война, в оккупированной немцами Франции группа американских солдат-евреев наводит страх на нацистов, жестоко убивая и скальпируя солдат.</div>
-							</div>
-						</div>
-						<div class="main_film_btns">
-							<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
-							<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-							<div class="main_film_raiting">
-								<div>Рейтинг: <span>5.0</span>/<span>5.0</span></div>
-								<div class="stars"><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg><svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="#CE0000"/></svg></div>
-							</div>
-						</div>
-						<div class="line"></div>
+				<div class="film-pages">
+					<div class="dots-list">
+						<li><a href="#" class="">1</a></li>
+						<li><a href="#" class="">2</a></li>
+						<li><a href="#" class="">3</a></li>
+						<li><a href="#" class="">4</a></li>
+						<li><a href="#" class="" style="pointer-events: none;">...</a></li>
+						<li><a href="#" class="">9</a></li>
 					</div>
 				</div>
 			</div>
