--- a/user.html
+++ b/user.html
@@ -62,7 +62,7 @@
 			<button class="user_change password_change">Изменить пароль</button>
 			<button class="user_change email_change">Изменить почту</button>
 			<div class="user_img">
-				<img src="images/no_photo.png" alt="" class="user_info_img" width="270" height="405">
+				<img src="images/no_photo.png" alt="" class="user_info_img">
 				<button class="user_img_change">Изменить</button>
 			</div>
 			
