--- a/апрап.html
+++ b/апрап.html
@@ -66,7 +66,7 @@
 		<div class="user_info">
 
 			<div class="user_img">
-				<img src="/media/videoderby/videoderby/media/images/UserPictures/ava.png" alt="" class="user_info_img" width="270" height="405">
+				<img src="/media/videoderby/videoderby/media/images/UserPictures/ava.png" alt="" class="user_info_img">
 			</div>
 			
 			<form method="POST" class="user_info_text">
