--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<div class="top_slider_film_title">
 						<span>Приготовьтесь к продолжению истории Томаса Шелби и его неугомонных братьев</span>
 						<div class="top_slider_info_right">
-							<button class="top_slider_button like" id="like_button_slide_1"><img src="images/vectors/heartW.png" alt=""></button>
+							<button class="top_slider_button like" id="like_button_slide_1"></button>
 							<button class="top_slider_button add" id="add_button_slide_1"><img src="images/vectors/addW.png" alt=""></button>
 						</div>
 					</div>
@@ -57,7 +57,7 @@
 					<div class="top_slider_film_title">
 						<span>title</span>
 						<div class="top_slider_info_right">
-							<button class="top_slider_button like" id="like_button_slide_2"><img src="images/vectors/heartW.png" alt=""></button>
+							<button class="top_slider_button like" id="like_button_slide_2"></button>
 							<button class="top_slider_button add" id="add_button_slide_2"><img src="images/vectors/addW.png" alt=""></button>
 						</div>
 					</div>
@@ -76,7 +76,7 @@
 					<div class="top_slider_film_title">
 						<span>title</span>
 						<div class="top_slider_info_right">
-							<button class="top_slider_button like" id="like_button_slide_3"><img src="images/vectors/heartW.png" alt=""></button>
+							<button class="top_slider_button like" id="like_button_slide_3"></button>
 							<button class="top_slider_button add" id="add_button_slide_3"><img src="images/vectors/addW.png" alt=""></button>
 						</div>
 					</div>
@@ -362,7 +362,7 @@
 								<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
 								<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
 								
-								<div class="bottom_right_btns"><button><img src="images/vectors/heartW.png" alt=""></button><button><img src="images/vectors/addW.png" alt=""></button></div>
+								<div class="bottom_right_btns"><button><div class="like"></div></button><button><img src="images/vectors/addW.png" alt=""></button></div>
 							</div>
 						</div>
 						<div class="main_film">
@@ -386,7 +386,7 @@
 							<div class="main_film_btns">
 								<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
 								<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-								<div class="bottom_right_btns"><button><img src="images/vectors/heartW.png" alt=""></button><button><img src="images/vectors/addW.png" alt=""></button></div>
+								<div class="bottom_right_btns"><button><div class="like"></div></button><button><img src="images/vectors/addW.png" alt=""></button></div>
 							</div>
 						</div>
 						<div class="main_film">
@@ -410,7 +410,7 @@
 							<div class="main_film_btns">
 								<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
 								<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-								<div class="bottom_right_btns"><button><img src="images/vectors/heartW.png" alt=""></button><button><img src="images/vectors/addW.png" alt=""></button></div>
+								<div class="bottom_right_btns"><button><div class="like"></div></button><button><img src="images/vectors/addW.png" alt=""></button></div>
 							</div>
 						</div>
 						<div class="main_film">
@@ -434,7 +434,7 @@
 							<div class="main_film_btns">
 								<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
 								<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-								<div class="bottom_right_btns"><button><img src="images/vectors/heartW.png" alt=""></button><button><img src="images/vectors/addW.png" alt=""></button></div>
+								<div class="bottom_right_btns"><button><div class="like"></div></button><button><img src="images/vectors/addW.png" alt=""></button></div>
 							</div>
 						</div>
 						<div class="main_film">
@@ -458,7 +458,7 @@
 							<div class="main_film_btns">
 								<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
 								<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-								<div class="bottom_right_btns"><button><img src="images/vectors/heartW.png" alt=""></button><button><img src="images/vectors/addW.png" alt=""></button></div>
+								<div class="bottom_right_btns"><button><div class="like"></div></button><button><img src="images/vectors/addW.png" alt=""></button></div>
 							</div>
 						</div>
 						<div class="main_film">
@@ -483,7 +483,7 @@
 								<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
 								<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
 								
-								<div class="bottom_right_btns"><button><img src="images/vectors/heartW.png" alt=""></button><button><img src="images/vectors/addW.png" alt=""></button></div>
+								<div class="bottom_right_btns"><button><div class="like"></div></button><button><img src="images/vectors/addW.png" alt=""></button></div>
 							</div>
 						</div>
 						<div class="main_film">
@@ -507,7 +507,7 @@
 							<div class="main_film_btns">
 								<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
 								<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-								<div class="bottom_right_btns"><button><img src="images/vectors/heartW.png" alt=""></button><button><img src="images/vectors/addW.png" alt=""></button></div>
+								<div class="bottom_right_btns"><button><div class="like"></div></button><button><img src="images/vectors/addW.png" alt=""></button></div>
 							</div>
 						</div>
 						<div class="main_film">
@@ -531,7 +531,7 @@
 							<div class="main_film_btns">
 								<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
 								<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-								<div class="bottom_right_btns"><button><img src="images/vectors/heartW.png" alt=""></button><button><img src="images/vectors/addW.png" alt=""></button></div>
+								<div class="bottom_right_btns"><button><div class="like"></div></button><button><img src="images/vectors/addW.png" alt=""></button></div>
 							</div>
 						</div>
 						<div class="main_film">
@@ -555,7 +555,7 @@
 							<div class="main_film_btns">
 								<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
 								<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-								<div class="bottom_right_btns"><button><img src="images/vectors/heartW.png" alt=""></button><button><img src="images/vectors/addW.png" alt=""></button></div>
+								<div class="bottom_right_btns"><button><div class="like"></div></button><button><img src="images/vectors/addW.png" alt=""></button></div>
 							</div>
 						</div>
 						<div class="main_film">
@@ -579,7 +579,7 @@
 							<div class="main_film_btns">
 								<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
 								<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-								<div class="bottom_right_btns"><button><img src="images/vectors/heartW.png" alt=""></button><button><img src="images/vectors/addW.png" alt=""></button></div>
+								<div class="bottom_right_btns"><button><div class="like"></div></button><button><img src="images/vectors/addW.png" alt=""></button></div>
 							</div>
 						</div>
 					</div>
