--- a/film.html
+++ b/film.html
@@ -52,8 +52,8 @@
 			<div class="poster_btns">
 				<img src="images/films/babydriver/poster.png" alt="" class="film_info_img" width="270" height="405">
 				<div class="like_add">
-					<button class="film_like"><img src="images/vectors/heartW.png" alt=""></button>
-					<button class="film_add"><img src="images/vectors/addW.png" alt=""></button>
+					<button class="film_like"><div class="like" onclick="$(this).toggleClass('like_pressed')"></div></button>
+					<button class="film_add"><div class="add"></div></button>
 
 				</div>
 			</div>
