--- a/films.html
+++ b/films.html
@@ -139,7 +139,7 @@
 			<div class="main_film_btns">
 				<button class="top_slider_button tr_sub trailer" id="main_film_tr_btn_1">Смотреть трейлер</button>
 				<button class="top_slider_button tr_sub watch" id="main_film_watch_btn_1">Смотреть онлайн</button>
-				<div class="bottom_right_btns"><button><img src="images/vectors/heartW.png" alt=""></button><button><img src="images/vectors/addW.png" alt=""></button></div>
+				<div class="bottom_right_btns"><button><div class="like" onclick="$(this).toggleClass('like_pressed')"></div></button><button><div class="add"></div></button></div>
 			</div>
 		</div>
 	</section>
