--- a/actor.html
+++ b/actor.html
@@ -32,7 +32,7 @@
 	
 	<section class="page">
 		<div class="actor_info">
-			<button class="actor_like"><img src="images/vectors/heart.png" alt=""></button>
+			<button class="actor_like"><div class="like" onclick="$(this).toggleClass('like_pressed')"></div></button>
 
 			<img src="images/actorPhotos/CillianMurphy/1.png" alt="" class="actor_info_img">
 			<div class="actor_info_text">
