--- a/film.html
+++ b/film.html
@@ -55,7 +55,7 @@
 				<img src="images/films/babydriver/poster.png" alt="" class="film_info_img" width="270" height="405" onclick="errorMes('error', 'error')">
 				<div class="like_add">
 					<button class="film_like"><div class="like" onclick="$(this).toggleClass('like_pressed')"></div></button>
-					<button class="film_add"><div class="add"></div></button>
+					<button class="film_add"><div class="add" onclick="$(this).toggleClass('add_pressed')"></div></button>
 
 				</div>
 			</div>
