--- a/leter.html
+++ b/leter.html
@@ -17,7 +17,7 @@
 				<a href="#" class="site_name">VideoDerby</a>
 
 				<nav class="header__nav">
-					<a href="#" id="films">ФИЛЬМЫ</a>
+					<a href="#" id="users">ФИЛЬМЫ</a>
 					<a href="#" id="serials">СЕРИАЛЫ</a>
 					<a href="#" id="afisha">АФИША</a>
 				</nav>
@@ -29,95 +29,9 @@
 			</div>
 		</div>
 	</header>
-	
+
 	<section class="page">
-		<div class="films_search">
-			<h1>Искать фильм</h1>
-			<form class="films_search_filter">
-				<input type="text" placeholder="название фильма" class="input_area">
-				<div class="year_filter">
-					<input type="text" class="input_area" placeholder="year">
-				</div>
-				<div class="interval_filter">
-					<span>или интервал</span>
-					<span>c</span>
-					<select name="" id="" class="input_area">
-						<option value="" disabled="" selected="">-</option>
-						<option value="">2</option>
-						<option value="">3</option>
-					</select>
-					<span>по</span>
-					<select name="" id="" class="input_area">
-						<option value="" disabled="" selected="">-</option>
-						<option value="">2</option>
-						<option value="">3</option>
-					</select>
-				</div>
-				<div class="strana_filter">
-					<span>+страна</span>
-					<select name="" id="" class="input_area">
-						<option value="" disabled="" selected="">-</option>
-						<option value="">2</option>
-						<option value="">3</option>
-					</select>
-				</div>
-				<div class="select_container genre">
-					<div id="genre_span">Жанр:</div>
-					<div class="films_select " name="genre" id="genre">
-						<span class="cur_select">Все жанры</span>
-					</div>
-					<div class="select_list">
-						<div class="select_list_wrapper">
-							<div class="select_list_item">
-								<input type="radio" id="allgenre" value="" name="genre_item" checked="checked">
-								<label for="allgenre">Все жанры</label>
-							</div>
-							<div class="select_list_item">
-								<input type="radio" id="triller" value="" name="genre_item">
-								<label for="triller">Триллер</label>
-							</div>
-							<div class="select_list_item">
-								<input type="radio" id="boevik" value="" name="genre_item">
-								<label for="boevik">Боевик</label>
-							</div>
-							<div class="select_list_item">
-								<input type="radio" id="fantastika" value="" name="genre_item">
-								<label for="fantastika">Фантастика</label>
-							</div>
-							<div class="select_list_item">
-								<input type="radio" id="12312" value="" name="genre_item">
-								<label for="12312">12312</label>
-							</div>
-							<div class="select_list_item">
-								<input type="radio" id="123133" value="" name="genre_item">
-								<label for="123133">123133</label>
-							</div>
-							<div class="select_list_item">
-								<input type="radio" id="112321" value="" name="genre_item">
-								<label for="112321">112321</label>
-							</div>
-							<div class="select_list_item">
-								<input type="radio" id="312233" value="" name="genre_item">
-								<label for="312233">312233</label>
-							</div>
-							<div class="select_list_item">
-								<input type="radio" id="312233" value="" name="genre_item">
-								<label for="312233">312233</label>
-							</div>
-							<div class="select_list_item">
-								<input type="radio" id="312233" value="" name="genre_item">
-								<label for="312233">312233</label>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="release">
-					<span>+премьера</span>
-					<input type="date" class="input_area">
-				</div>
-				<input type="submit" class="login_btn">
-			</form>
-		</div>
+		<h1 style="text-align: center; margin-top: 100px; margin-bottom: 30px;">Посмотреть позже</h1>
 		<div class="main_film">
 			<div class="main_film_title">
 				<span>Бесславные ублюдки (2009)</span>
@@ -143,6 +57,7 @@
 			</div>
 		</div>
 	</section>
+
 	<footer class="footer">
 		<div class="footer_site_label">VideoDerby</div>
 		<div class="trash">
@@ -156,7 +71,7 @@
 			<div class="maded">Разработано: <span>Долбоёбами ИПЭКа</span></div>
 		</div>
 	</footer>
-	<script src="http://kinoplayer.top/top.js"></script>
+
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/jquery.raty.js"></script>
 	<script src="js/slick.js"></script>
