anton, ya ispravilsya. eto norm komment. index/ select filter

--- a/VideoDerby.html
+++ b/VideoDerby.html
@@ -135,79 +135,19 @@
 					<div class="filter_lists">
 						<div class="select_container genre">
 							<div id="genre_span">Жанр:</div>
-							<div class="films_select " name="genre" id="genre">
-								<span class="cur_select">Жанр</span>
-							</div>
-							<div class="select_list">
-								<div class="select_list_wrapper">
-									<div class="select_list_item">
-										<input type="checkbox" id="triller" value="">
-										<label for="triller">Триллер</label>
-									</div>
-									<div class="select_list_item">
-										<input type="checkbox" id="boevik" value="">
-										<label for="boevik">Боевик</label>
-									</div>
-									<div class="select_list_item">
-										<input type="checkbox" id="fantastika" value="">
-										<label for="fantastika">Фантастика</label>
-									</div>
-									<div class="select_list_item">
-										<input type="checkbox" id="12312" value="">
-										<label for="12312">12312</label>
-									</div>
-									<div class="select_list_item">
-										<input type="checkbox" id="123133" value="">
-										<label for="123133">123133</label>
-									</div>
-									<div class="select_list_item">
-										<input type="checkbox" id="112321" value="">
-										<label for="112321">112321</label>
-									</div>
-									<div class="select_list_item">
-										<input type="checkbox" id="312233" value="">
-										<label for="312233">312233</label>
-									</div>
-								</div>
-							</div>
+							<select name="" id="" class="films_select">
+								<option value="" disabled="" selected="">-</option>
+								<option value="">2</option>
+								<option value="">3</option>
+							</select>
 						</div>
 						<div class="select_container year">
 							<div id="genre_span">Год выпуска:</div>
-							<div class="films_select " name="year" id="year">
-								<span class="cur_select">Все годы</span>
-							</div>
-							<div class="select_list">
-								<div class="select_list_wrapper">
-									<div class="select_list_item">
-										<input type="checkbox" id="allyears" value="">
-										<label for="allyears">Все годы</label>
-									</div>
-									<div class="select_list_item">
-										<input type="checkbox" id="2020" value="">
-										<label for="2020">2020</label>
-									</div>
-									<div class="select_list_item">
-										<input type="checkbox" id="2019" value="">
-										<label for="2019">2019</label>
-									</div>
-									<div class="select_list_item">
-										<input type="checkbox" id="2018" value="">
-										<label for="2018">2018</label>
-									</div>
-									<div class="select_list_item">
-										<input type="checkbox" id="2017" value="">
-										<label for="2017">2017</label>
-									</div>
-									<div class="select_list_item">
-										<input type="checkbox" id="2016" value="">
-										<label for="2016">2016</label>
-									</div>
-									<div class="select_list_item">
-										<input type="checkbox" id="2015" value="">
-										<label for="2015">2015</label>
-									</div>
-								</div>
-							</div>
+							<select name="" id="" class="films_select">
+								<option value="" disabled="" selected="">-</option>
+								<option value="">2</option>
+								<option value="">3</option>
+							</select>
 						</div>
 							</div>
 						</div>
