--- a/dodelay_formu.html
+++ b/dodelay_formu.html
@@ -31,10 +31,51 @@
 				<div class="notif">
 					<button class="notifBtn" ></button>
 					<div class="notifList">
-    					<div class="notifNote">
-    						<img src="images/666.jpg" alt="" class="notifAvatar">
-    						<span class="notifHead">User оценил ваш отзыв</span>
-    					</div>
+						<ul class="notifListUL">
+							<li>
+								<div class="notifNote">
+    								<img src="images/666.jpg" alt="" class="notifAvatar">
+    								<span class="notifHead"><пользователь> поставил Лайк/Дизлайк на ваш комментарий под фильмом <фильм></span>
+    							</div>
+    						</li>
+    						<li>
+								<div class="notifNote">
+    								<img src="images/666.jpg" alt="" class="notifAvatar">
+    								<span class="notifHead"><пользователь> поставил Лайк/Дизлайк на ваш комментарий под фильмом <фильм></span>
+    							</div>
+    						</li>
+    						<li>
+								<div class="notifNote">
+    								<img src="images/666.jpg" alt="" class="notifAvatar">
+    								<span class="notifHead"><пользователь> поставил Лайк/Дизлайк на ваш комментарий под фильмом <фильм></span>
+    							</div>
+    						</li>
+    						<li>
+								<div class="notifNote">
+    								<img src="images/666.jpg" alt="" class="notifAvatar">
+    								<span class="notifHead"><пользователь> поставил Лайк/Дизлайк на ваш комментарий под фильмом <фильм></span>
+    							</div>
+    						</li>
+    						<li>
+								<div class="notifNote">
+    								<img src="images/666.jpg" alt="" class="notifAvatar">
+    								<span class="notifHead"><пользователь> поставил Лайк/Дизлайк на ваш комментарий под фильмом <фильм></span>
+    							</div>
+    						</li>
+    						<li>
+								<div class="notifNote">
+    								<img src="images/666.jpg" alt="" class="notifAvatar">
+    								<span class="notifHead"><пользователь> поставил Лайк/Дизлайк на ваш комментарий под фильмом <фильм></span>
+    							</div>
+    						</li>
+    						<li>
+								<div class="notifNote">
+    								<img src="images/666.jpg" alt="" class="notifAvatar">
+    								<span class="notifHead"><пользователь> поставил Лайк/Дизлайк на ваш комментарий под фильмом <фильм></span>
+    							</div>
+    						</li>
+						</ul>
+    					
     				</div>
 				</div>
 
